--- a/app/src/main/res/drawable/top_column.xml
+++ b/app/src/main/res/drawable/top_column.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <solid android:color="#A7A7A7" />
     <stroke android:width="0.5dp" android:color="#000000" />
 </shape>
